--- a/flower.html
+++ b/flower.html
@@ -13,7 +13,7 @@
     <div id="lyrics">
      
     </div>
-    <h1 class="titulo">Estas 3 gerberas son un reflejo de lo mucho que te amo y la feliz que me haces día a día <br> <br>
+    <h1 class="titulo">Estas 3 gerberas son un reflejo de lo mucho que te amo y lo feliz que me haces día a día <br> <br>
       🩷 Gracias por formar parte de mi vida mi princesa 🩷</h1>
   
     <div class="night"></div>
